RESOLVED FIXED286852
[Cleanup] LegacyLineLayout never holds more than one (svg)line anymore
https://bugs.webkit.org/show_bug.cgi?id=286852
Summary [Cleanup] LegacyLineLayout never holds more than one (svg)line anymore
alan
Reported 2025-01-31 21:02:39 PST
ssia
Attachments
Patch (8.43 KB, patch)
2025-01-31 21:08 PST, alan
no flags
Patch (8.43 KB, patch)
2025-02-01 18:44 PST, alan
ews-feeder: commit-queue-
Patch (8.45 KB, patch)
2025-02-01 19:21 PST, alan
no flags
[fast-cq]Patch (8.31 KB, patch)
2025-02-02 20:25 PST, alan
no flags
alan
Comment 1 2025-01-31 21:08:15 PST
alan
Comment 2 2025-02-01 18:44:42 PST
alan
Comment 3 2025-02-01 19:21:01 PST
alan
Comment 4 2025-02-02 20:25:01 PST
Created attachment 474111 [details] [fast-cq]Patch
EWS
Comment 5 2025-02-03 05:14:36 PST
Committed 289731@main (417b1475277d): <https://commits.webkit.org/289731@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 474111 [details].
Radar WebKit Bug Importer
Comment 6 2025-02-03 05:15:15 PST
Note You need to log in before you can comment on or make changes to this bug.