[Cleanup] LegacyLineLayout never holds more than one (svg)line anymore https://bugs.webkit.org/show_bug.cgi?id=286852

Reviewed by Antti Koivisto.

No line break in SVG content. Only one line per svg "block".

* Source/WebCore/rendering/LegacyLineLayout.cpp:
(WebCore::LegacyLineLayout::~LegacyLineLayout):
(WebCore::LegacyLineLayout::createAndAppendRootInlineBox):
(WebCore::LegacyLineLayout::layoutRunsAndFloats):
(WebCore::LegacyLineLayout::layoutLineBoxes):
(WebCore::LegacyLineLayout::shiftLineBy):
(WebCore::LegacyLineLayout::deleteLegacyRootBox):
* Source/WebCore/rendering/LegacyLineLayout.h:
(WebCore::LegacyLineLayout::legacyRootBox const):
(WebCore::LegacyLineLayout::lineBoxes): Deleted.
(WebCore::LegacyLineLayout::lineBoxes const): Deleted.
* Source/WebCore/rendering/LegacyRootInlineBox.cpp:
(WebCore::LegacyRootInlineBox::removeLineBoxFromRenderObject):
* Source/WebCore/rendering/LegacyRootInlineBox.h:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::willBeDestroyed):
(WebCore::RenderBlockFlow::shiftForAlignContent):
* Source/WebCore/rendering/RenderBlockFlow.h:

Canonical link: https://commits.webkit.org/289731@main