Source/WebCore/rendering/LegacyRootInlineBox.h
@@ -80,7 +80,7 @@ public:
     const LegacyInlineBox* lastSelectedBox() const;
 
     void removeLineBoxFromRenderObject() final;
-    
+
     FontBaseline baselineType() const { return static_cast<FontBaseline>(m_baselineType); }
     
     LayoutUnit logicalTopVisualOverflow() const
